Login via facebook en la navbar

--- a/apps/core/static/css/buscador.css
+++ b/apps/core/static/css/buscador.css
@@ -266,3 +266,6 @@ div.leaflet-marker-icon.markerT {
 .itemResultado.active .botones {
     display: block;
 }
+.navbar-inverse .nav>li>a {
+    color: white !important;
+}
