--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -154,6 +154,7 @@
 <script src="{{ STATIC_URL }}js/wicket-leaflet.js"></script>
 <script src="{{ STATIC_URL }}js/leaflet.editableCircleMarker.js"></script>
 <script src="{{ STATIC_URL }}js/leaflet.polyLineDecorator.js"></script>
+<script src="{{ STATIC_URL }}js/leaflet.knn.js"></script>
 <script src="{{ STATIC_URL }}js/Bing.js"></script>
 
 <script>
