--- a/templates/catastro/ver_poi.html
+++ b/templates/catastro/ver_poi.html
@@ -1,7 +1,7 @@
 {% extends "contenido.html" %}
 
-{% block title %}Cómo llegar a {{poi.nombre|title}} en {{ciudad_actual.nombre|title}} - Cualbondi{% endblock %}
-{% block meta_description %}Cómo llegar a {{poi.nombre|title}} y qué líneas de recorridos de micros y ómnibus y buses pasan por {{poi.nombre|title}} en {{ciudad_actual.nombre|title}}.{% endblock %}
+{% block title %}Cómo llegar a {{poi.nom|title}}{% if ciudad_actual %} en {{ciudad_actual.0.nombre|title}}{% endif %} - Cualbondi{% endblock %}
+{% block meta_description %}Cómo llegar a {{poi.nom|title}} y qué líneas de recorridos de micros y ómnibus y buses pasan por {{poi.nom|title}}{% if ciudad_actual %} en {{ciudad_actual.0.nombre|title}}{% endif %}.{% endblock %}
 
 {% block head-attrs %}{% endblock %}
 
@@ -23,7 +23,7 @@
         <h3>Otros puntos de interés cercanos</h3>
         <ul>
             {% for p in pois %}
-            <li><a href="{{p.get_absolute_url}}">{{ p.nombre }}</a></li>
+            <li><a href="{{p.get_absolute_url}}">{{ p.nom }}</a></li>
             {% endfor %}
         </ul>
         <br />
