--- a/templates/catastro/ver_poi.html
+++ b/templates/catastro/ver_poi.html
@@ -1,4 +1,5 @@
 {% extends "contenido.html" %}
+{% load bootstrap_tags %}
 
 {% block title %}Cómo llegar a {{poi.nom|title}}{% if ciudad_actual %} en {{ciudad_actual.0.nombre|title}}{% endif %} - Cualbondi{% endblock %}
 {% block meta_description %}Cómo llegar a {{poi.nom|title}} y qué líneas de recorridos de micros y ómnibus y buses pasan por {{poi.nom|title}}{% if ciudad_actual %} en {{ciudad_actual.0.nombre|title}}{% endif %}.{% endblock %}
@@ -7,36 +8,40 @@
 
 {% block bloque_izquierda %}
     <div>
-        <h1 style="display:inline;">¿Cómo llegar a {{poi.nom}}?</h1>
+        <h1>¿Cómo llegar a {{poi.nom}}?</h1>
     </div>
 
     {% if recorridos %}
-        <h3>Recorridos de transporte público que pasan por aquí</h3>
-        <ul>
-            {% for r in recorridos %}
-            <li><a href="{{r.get_absolute_url}}">{{r.linea.nombre}} - {{ r.nombre }} <small>({{r.inicio}} >> {{r.fin}})</small></a></li>
+        <div class="row-fluid">
+            <h2>Recorridos de transporte público que pasan por aquí</h2>
+            {% for columna in recorridos|dividir_columnas:3 %}
+            <div class="span4">
+                <ul class="nav nav-pills nav-stacked">
+                {% for rs in columna %}
+                    <li><a href="{{rs.get_absolute_url}}" style="text-align:left">{{rs.linea.nombre}} - {{rs.nombre}}{% if rs.inicio and rs.fin %} <span class="light">de {{rs.inicio}} a {{rs.fin}}</span>{% endif %}</a></li>
+                {% endfor %}
+                </ul>
+            </div>
             {% endfor %}
-        </ul>
+        </div>
     {% endif %}
 
     {% if pois %}
-        <h3>Otros puntos de interés cercanos</h3>
+        <h2>Otros puntos de interés cercanos</h2>
         <ul>
             {% for p in pois %}
             <li><a href="{{p.get_absolute_url}}">{{ p.nom }}</a></li>
             {% endfor %}
         </ul>
-        <br />
     {% endif %}
 
     {% if zonas %}
-        <h3>Barrios cercanos</h3>
+        <h2>Barrios cercanos</h2>
         <ul>
             {% for z in zonas %}
             <li>{{ z.name }}</li>
             {% endfor %}
         </ul>
-        <br />
     {% endif %}
 
 {% endblock %}
