--- a/templates/core/ver_ciudad.html
+++ b/templates/core/ver_ciudad.html
@@ -7,22 +7,63 @@
 {% block meta_description %}Toda la información sobre líneas, ramales, recorridos, paradas, horarios y tarifas de transporte público local que pasa por la ciudad de {{ciudad_actual.nombre|title}}, incluyendo bondis, micros, colectivos, trenes y subtes.{% endblock %}
 
 {% block bloque_izquierda %}
+
     <ul class="breadcrumb">
         <li><a href="/">Inicio</a> <span class="divider">&gt;</span></li>
         <li class="active">{{ciudad_actual.nombre}}</li>
     </ul>
 
-    <h1>Ciudad de {{ciudad_actual.nombre}}</h1>
+    <h1 style="margin:0">Ciudad de {{ciudad_actual.nombre}}</h1>
 
-    <div class="well">
-        <form method="GET" action="/mapa/{{ciudad_actual.slug}}/" class="form-inline" style="margin: 0px; font-size: 14px;">
-            <span style="margin-right: 5px;">Buscar transporte en <strong>{{ciudad_actual.nombre}}</strong> desde</span>
-            <input type="text" name="desde" class="input-medium" placeholder="ingrese origen...">
-            <span style="margin-left: 5px; margin-right: 5px;">hasta</span>
-            <input type="text" name="hasta" class="input-medium" placeholder="ingrese destino...">
-            <button type="submit" class="btn btn-primary"><i class="icon-search icon-white"></i> Buscar »</button>
-        </form>
+    <h2>Cómo llegar en {{ciudad_actual.nombre}}</h2>
+    <form method="GET" action="/mapa/{{ciudad_actual.slug}}/" class="form-inline">
+        <input type="text" name="desde" class="input-medium span5" placeholder="Desde">
+        <input type="text" name="hasta" class="input-medium span5" placeholder="Hasta">
+        <button type="submit" class="btn btn-default span2 pull-right"><i class="icon-search"></i> Buscar</button>
+    </form>
+
+    <div class="row-fluid">
+        <h2>Lineas de transporte público</h2>
+        {% for columna in lineas|dividir_columnas:6 %}
+        <div class="span2">
+            <ul class="nav nav-pills nav-stacked">
+            {% for linea in columna %}
+                <li><a href={{linea.slug}}/>{{linea.nombre}}</a></li>
+            {% endfor %}
+            </ul>
+        </div>
+        {% endfor %}
     </div>
+
+    {% if ciudad_actual.img_panorama %}
+    <h2>Area cubierta por transporte público</h2>
+    <div class="thumbnail">
+        <div id="map" style="background:lightblue;">
+            <img src="/{{ ciudad_actual.img_panorama.url }}" alt="Cobertura de transporte público de la ciudad de {{ ciudad_actual.nombre }}." />
+        </div>
+    </div>
+    
+    <br />
+    {% endif %}
+
+    {% if tarifas %}
+        <h2>Precio del boleto</h2>
+        <table class="table table-striped table-bordered table-condensed">
+            <thead>
+                <th>Tipo de boleto</th>
+                <th>Precio</th>
+            </thead>
+            <tbody>
+            {% for tarifa in tarifas %}
+                <tr>
+                    <td>{{tarifa.tipo}}</td>
+                    <td>${{tarifa.precio}}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        <br />
+    {% endif %}
 
     {% if imagenes|length > 1 %}
     <div id="ciudad_carousel" class="carousel slide">
@@ -49,52 +90,8 @@
         <br />
     {% endif %}
 
-    {% if ciudad_actual.img_panorama %}
-    <h3>Area cubierta por transporte público:</h3>
-    <div class="thumbnail">
-        <div id="map" style="background:lightblue;">
-            <img src="/{{ ciudad_actual.img_panorama.url }}" alt="Cobertura de transporte público de la ciudad de {{ ciudad_actual.nombre }}." />
-        </div>
-    </div>
-    
-    <br />
-    {% endif %}
-
-    <h3>Lineas de micro en {{ciudad_actual.nombre}}:</h3>
-    <table class="table table-striped table-bordered table-condensed">
-        <tbody>
-        {% for columna in lineas|dividir_columnas:5 %}
-            <tr>
-            {% for linea in columna %}
-                <td><a href={{linea.slug}}/>Linea {{linea.nombre}}</a></td>
-            {% endfor %}
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    <br />
-
-    {% if tarifas %}
-        <h3>Precio del boleto</h3>
-        <table class="table table-striped table-bordered table-condensed">
-            <thead>
-                <th>Tipo de boleto</th>
-                <th>Precio</th>
-            </thead>
-            <tbody>
-            {% for tarifa in tarifas %}
-                <tr>
-                    <td>{{tarifa.tipo}}</td>
-                    <td>${{tarifa.precio}}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-        <br />
-    {% endif %}
-
     <!--[if (!IE)|(gt IE 7)]-->
-        <h3>Dejanos un comentario sobre "{{ciudad_actual.nombre}}"</h3>
+        <h2>Dejanos un comentario sobre {{ciudad_actual.nombre}}</h2>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
