--- a/templates/core/ver_linea.html
+++ b/templates/core/ver_linea.html
@@ -23,7 +23,7 @@
     </ul>
 
     <div>
-        <h1 style="display:inline;">Linea {{linea_actual.nombre}} de {{ciudad_actual.nombre}}</h1>
+        <h1 style="display:inline;">Linea {{linea_actual.nombre}}</h1>
         <div style="vertical-align: super;margin-left: 10px;" class="fb-like" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
     </div>
 
@@ -33,32 +33,29 @@
             <img src="/{{ linea_actual.img_panorama.url }}" alt="Cobertura de transporte público de la línea {{ linea_actual.nombre }} en la ciudad de {{ ciudad_actual.nombre }}." />
         </div>
     </div>
-    <br />
     {% endif %}
 
     {% if linea_actual.info_empresa and linea_actual.info_terminal %}
-        <h3>Información de la empresa</h3>
+        <h2>Información de la empresa</h2>
         <div>{{linea_actual.info_empresa}}</div>
         <div>{{linea_actual.info_terminal}}</div>
-        <br />
     {% endif %}
 
-    <h3>Recorridos de la linea {{linea_actual.nombre}}:</h3>
-    <table class="table table-striped table-bordered table-condensed">
-        <tbody>
-        {% for columna in recorridos|dividir_columnas:2 %}
-            <tr>
+    <div class="row-fluid">
+        <h2>Recorridos de la linea {{linea_actual.nombre}}</h2>
+        {% for columna in recorridos|dividir_columnas:3 %}
+        <div class="span4">
+            <ul class="nav nav-pills nav-stacked">
             {% for recorrido in columna %}
-                <td><a href={{recorrido.slug}}/>Recorrido {{recorrido.nombre}} {% if recorrido.inicio and recorrido.fin %}(de {{recorrido.inicio}} a {{recorrido.fin}}){% endif %}</a></td>
+                <li style="text-align:left"><a href={{recorrido.slug}}/>{{recorrido.nombre}}{% if recorrido.inicio and recorrido.fin %} <span class="light">de {{recorrido.inicio}} a {{recorrido.fin}}</span>{% endif %}</a></li>
             {% endfor %}
-            </tr>
+            </ul>
+        </div>
         {% endfor %}
-        </tbody>
-    </table>
-    <br />
+    </div>
 
     <!--[if (!IE)|(gt IE 7)]-->
-        <h3>Dejanos un comentario sobre la linea "{{linea_actual.nombre}}"</h3>
+        <h2>Dejanos un comentario sobre la linea {{linea_actual.nombre}}</h2>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
