--- a/templates/core/ver_recorrido.html
+++ b/templates/core/ver_recorrido.html
@@ -104,7 +104,7 @@
         <h2>Paradas:</h2>
         <ul>
         {% for h in horarios %}
-            <li>{% if h.parada.codigo %}{{ h.parada.codigo }} -{% endif %}{% if h.parada.nombre %} {{ h.parada.nombre }}{% endif %}</li>
+            <li><a href="{{h.parada.get_absolute_url}}">{{ h.parada }}</a></li>
         {% endfor %}
         </ul>
     {% endif %}
