- Changing Bing layer for OSM layer

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -164,7 +164,7 @@
     var ciudad_actual_zoom = {{ ciudad_actual.zoom }};
     var STATIC_URL = "{{ STATIC_URL }}";
 </script>
-<script src="{{ STATIC_URL }}js/functions-2.0.js"></script>
+<script src="{{ STATIC_URL }}js/functions-2.0.js?v=20152809"></script>
 
        <script id="ajaxLoader" type="text/x-jquery-tmpl">
             <center>
