cambiando la url a api/v2/

--- a/templates/rest_framework/api.html
+++ b/templates/rest_framework/api.html
@@ -1,7 +1,7 @@
 {% extends "rest_framework/base.html" %}
 
 {% block branding %}
-  <a class="navbar-brand" rel="nofollow" href="/api2/">
+  <a class="navbar-brand" rel="nofollow" href="/api/v2/">
     Cualbondi API <span class="version">2.0</span>
   </a>
 {% endblock %}
