--- a/templates/tracking.html
+++ b/templates/tracking.html
@@ -1,5 +1,16 @@
 <!-- Piwik -->
-<script type="text/javascript" src="//stats.cualbondi.com.ar/piwik/piwik.js"></script>
+<script type="text/javascript">
+  var _paq = _paq || [];
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//stats.cualbondi.com.ar/piwik/";
+    _paq.push(['setTrackerUrl', u+'piwik.php']);
+    _paq.push(['setSiteId', 1]);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
 <script type="text/javascript">
     var piwikTracker;
     function piwikLog(nombre){
