removing stat server piwik queries

--- a/templates/tracking.html
+++ b/templates/tracking.html
@@ -1,5 +1,5 @@
 <!-- Piwik -->
-<script type="text/javascript">
+<!--script type="text/javascript">
   var _paq = _paq || [];
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
@@ -10,7 +10,7 @@
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
   })();
-</script>
+</script-->
 <script type="text/javascript">
     var piwikTracker;
     function piwikLog(nombre){
@@ -29,7 +29,7 @@
         } catch( err ) {}
     })();
 </script>
-<noscript><p><img src="//stats.cualbondi.com.ar/piwik/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
+<!--noscript><p><img src="//stats.cualbondi.com.ar/piwik/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript-->
 <!-- End Piwik Tracking Code -->
 
 <!-- Analytics -->
