--- a/templates/editor/moderacion_listado.html
+++ b/templates/editor/moderacion_listado.html
@@ -11,7 +11,7 @@
         <td>{{ e.get_current_status_display }}</td>
         <td><a href="{% url "apps.editor.views.moderar_ediciones_uuid_aprobar" uuid=e.uuid %}?next={{ request.path }}">Aprobar</a></td>
         <td><a href="{% url "apps.editor.views.moderar_ediciones_uuid_rechazar" uuid=e.uuid %}?next={{ request.path }}">Rechazar</a></td>
-        <td>{% if e.get_fb_uid %}<a href="http://facebook.com/{{ e.get_fb_uid }}" target="_blank">{{ e.get_moderacion_last_user }}</a>{% endif %}</td>
+        <td>{% if e.get_fb_uid %}<a href="https://facebook.com/{{ e.get_fb_uid }}" target="_blank">{{ e.get_moderacion_last_user }}</a>{% endif %}</td>
     </tr>
     {% endfor %}
 </table>
