--- a/templates/widget/test.html
+++ b/templates/widget/test.html
@@ -11,18 +11,18 @@
         <h2>Buscadores</h2>
         
         <h3>Sin especificar ciudad</h3>
-        <script src="http://{{ current_site.domain }}/widget/v1/busqueda.js?key=123456789"></script>
+        <script src="https://{{ current_site.domain }}/widget/v1/busqueda.js?key=123456789"></script>
         
         <h3>Para ciudad de la plata</h3>
-        <script src="http://{{ current_site.domain }}/widget/v1/busqueda.js?key=123456789&ciudad=la-plata"></script>
+        <script src="https://{{ current_site.domain }}/widget/v1/busqueda.js?key=123456789&ciudad=la-plata"></script>
 
         <h2>Lineas que pasan por un lugar</h2>
         
         <h3>Solo lineas</h3>
-        <script src="http://{{ current_site.domain }}/widget/v1/lineas.js?key=123456789&lat=-34.93&lon=-57.95&rad=400"></script>
+        <script src="https://{{ current_site.domain }}/widget/v1/lineas.js?key=123456789&lat=-34.93&lon=-57.95&rad=400"></script>
 
         <h3>Lineas y ramales</h3>
-        <script src="http://{{ current_site.domain }}/widget/v1/lineas.js?key=123456789&lat=-34.93&lon=-57.95&rad=400&ramales=true"></script>
+        <script src="https://{{ current_site.domain }}/widget/v1/lineas.js?key=123456789&lat=-34.93&lon=-57.95&rad=400&ramales=true"></script>
 
     </body>
 
