--- a/templates/core/ver_parada.html
+++ b/templates/core/ver_parada.html
@@ -8,7 +8,7 @@
 
 {% block navbar %}
     {{ block.super }}
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
 {% endblock %}
 
 {% block bloque_izquierda %}
@@ -16,13 +16,13 @@
         <h1>Parada {{ parada }}</h1>
     </div>
 
-    <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+    <script src="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
     <div class="thumbnail">
         <div id="map" style="background:lightblue; height:300px; width:100%"></div>
     </div>
     <script>
         map = new L.Map('map', { zoomControl:false });
-        var osmUrl='http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png?pepe=asd';
+        var osmUrl='https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png?pepe=asd';
         var osmAttrib='&copy; Cualbondi &amp; OpenStreetMap contributors';
         map.attributionControl.setPrefix('Leaflet').addAttribution( osmAttrib );
         map.addLayer(new L.TileLayer(osmUrl, {maxZoom: 17, fadeAnimation: false}));
