--- a/templates/editor/moderacion_id.html
+++ b/templates/editor/moderacion_id.html
@@ -3,10 +3,10 @@
 <head>
     <title>Editor de Cualbondi</title>
 
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
+    <script src="https://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 
 
 </head>
@@ -49,8 +49,8 @@
         {% include "editor/dependencias.js" %}
 
         // Load map and base layer
-        var osmUrl='http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
-        var osmAttrib='Map data © Cualbondi & <a href="http://openstreetmap.org">OpenStreetMap</a> contributors';
+        var osmUrl='https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
+        var osmAttrib='Map data © Cualbondi & <a href="https://openstreetmap.org">OpenStreetMap</a> contributors';
         var osm = new L.TileLayer(osmUrl, {minZoom: 8, maxZoom: 19, attribution: osmAttrib});
         var map = new L.Map('map', {layers: [osm], center: new L.LatLng(-37.7772, 175.2756), zoom: 15 });
 
