fix links to leaflet with ssl

--- a/templates/catastro/ver_poi.html
+++ b/templates/catastro/ver_poi.html
@@ -8,7 +8,7 @@
 
 {% block navbar %}
     {{ block.super }}
-    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.css" />
 {% endblock %}
 
 {% block bloque_izquierda %}
@@ -16,7 +16,7 @@
         <h1>¿Cómo llegar a {{poi.nom}}?</h1>
     </div>
 
-    <script src="https://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.js"></script>
     <div class="thumbnail">
         <div id="map" style="background:lightblue; height:300px; width:100%"></div>
     </div>
