--- a/templates/editor/moderacion_id.html
+++ b/templates/editor/moderacion_id.html
@@ -3,8 +3,8 @@
 <head>
     <title>Editor de Cualbondi</title>
 
-    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
-    <script src="https://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js"></script>
 
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 
