--- a/templates/core/ver_obj_map.html
+++ b/templates/core/ver_obj_map.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html style="height:100%;width:100%;margin:0;padding:0">
     <head>
-        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-        <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.css" />
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.js"></script>
         <script>
             // http://makinacorpus.github.io/Leaflet.TextPath/leaflet.textpath.js
             // plugin leaflet para las flechitas en la polilinea.
